# miniDSP-Linux-qt

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  Makefile  README.md  TODO.md  cliff.toml  hooks.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
api/: index.html
api/minidspqt/: index.html
api/minidspqt/app/: index.html
api/minidspqt/blank_seed/: index.html
api/minidspqt/cli/: index.html
api/minidspqt/defaults/: index.html
api/minidspqt/device_thread/: index.html
api/minidspqt/model/: index.html
api/minidspqt/theme/: index.html
api/minidspqt/unt_loader/: index.html
api/minidspqt/unt_writer/: index.html
api/minidspqt/views/: index.html
api/minidspqt/virtual_dsp/: index.html
api/minidspqt/widgets/: index.html
changelog/: index.html
concept-art/: miniDSP-detailViewPEQ.excalidraw
concepts/: index.html
development/: index.html
doc/: architecture-plan.md  concepts.md  offline-mode-unt-read-write.md  user-guide.md
doc/concept-art/: miniDSP-detailView.excalidraw
docs/: development.md  gen_ref_pages.py  hooks.py  user-guide.md
docs/concept-art/: miniDSP-home.excalidraw
minidspqt/: __init__.py  app.py  blank_seed.py  cli.py  defaults.py  device_thread.py  model.py  scale.py  theme.py  unt_loader.py  unt_writer.py  virtual_dsp.py
minidspqt/forms/: home.ui
minidspqt/resources/: blank.unt  style.qss  style_dark.qss  style_light.qss
minidspqt/views/: channel_linking_dialog.py  channel_strip.py  copy_channel_dialog.py  detail_view.py  device_pin_dialog.py  home_view.py  main_window.py  preset_picker.py  test_tone_dialog.py
minidspqt/views/panels/: __init__.py  _overlay_controls.py  _slave_lock.py  compressor_panel.py  delay_panel.py  gate_panel.py  peq_panel.py  placeholder_panel.py  xover_panel.py
minidspqt/widgets/: __init__.py  compressor_graph.py  delay_graph.py  freq_response_graph.py  gain_indicator.py  gain_knob.py  gate_graph.py  led_indicator.py  level_meter.py  param_knob.py  peq_graph.py  routing_matrix.py  toggle_button.py
packaging/appimage/: AppRun  build.sh  init_environment.sh  minidspqt.desktop
scripts/: build_ui.sh  publish.sh  version.sh
search/: search_index.json
tests/: conftest.py  test_about_dialog.py  test_channel_linking_dialog.py  test_channel_linking_sync.py  test_compressor_graph.py  test_compressor_panel.py  test_delay_graph.py  test_delay_panel.py  test_detail_view_overlay.py  test_device_pin_dialog.py  test_device_thread.py  test_freq_response_graph_drag.py  test_freq_response_graph_overlay.py  test_main_window_mode_switch.py  test_model.py  test_overlay_controls.py  test_param_knob.py  test_peq_panel.py  test_preset_picker.py  test_routing_matrix.py  test_test_tone_dialog.py  test_theme.py  test_unt_loader.py  test_unt_writer.py  test_virtual_dsp.py  test_virtual_dsp_lock.py  test_xover_panel.py
user-guide/: index.html
(+30 files in other folders)
