[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minidsp-linux-qt"
version = "0.1.0"
description = "Graphical interface for the t.racks DSP 4x4 Mini"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.8",
    "minidsp-linux>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.4",
]

[project.scripts]
minidspqt = "minidspqt.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["minidspqt"]
artifacts = ["minidspqt/resources/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
minidsp-linux = { git = "https://github.com/IMBArator/miniDSP-Linux.git", tag = "v1.0.0" }
