[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minidsp-linux-qt"
version = "0.1.0"
description = "Graphical interface for the t.racks DSP 4x4 Mini"
requires-python = ">=3.11"
dependencies = [
    "PySide6-Essentials>=6.8",
    "minidsp-linux @ git+https://github.com/IMBArator/miniDSP-Linux.git@v1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.4",
]

[project.scripts]
minidspqt = "minidspqt.cli:main"

[tool.hatch.metadata]
# Required for the PEP 508 direct URL ('minidsp-linux @ git+...') in
# project.dependencies. Hatchling refuses to emit such refs into wheel
# metadata unless this is explicitly enabled.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["minidspqt"]
artifacts = ["minidspqt/resources/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
