[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minidsp-linux-qt"
version = "1.0.0"
description = "Graphical interface for the t.racks DSP 4x4 Mini"
requires-python = ">=3.11"
dependencies = [
    "PySide6-Essentials>=6.8",
    "minidsp-linux @ https://github.com/IMBArator/miniDSP-Linux/releases/download/v1.0.1/minidsp_linux-1.0.1-py3-none-any.whl",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.4",
]
docs = [
    "mkdocs>=1.6,<2.0",
    "mkdocs-material>=9.5",
    "mkdocs-include-markdown-plugin>=6.2",
    "mkdocstrings[python]>=0.26",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-section-index>=0.3",
]

[project.scripts]
minidspqt = "minidspqt.cli:main"

[tool.hatch.metadata]
# Required for the PEP 508 direct URL ('minidsp-linux @ git+...') in
# project.dependencies. Hatchling refuses to emit such refs into wheel
# metadata unless this is explicitly enabled.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["minidspqt"]
artifacts = ["minidspqt/resources/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
